# WickedEngine-Study

./: .gitignore  CMakeLists.txt  compile_commands.json
Editor/: TerrainWindow.cpp
Samples/My_Samples/: CMakeLists.txt
Samples/My_Samples/Physics/Ten_Minute_Physics/10-SoftBodies/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/10-SoftBodies/incl/: bunnyMesh.h  grabber.h  sample.h  simulation_utils.h  softBody.h
Samples/My_Samples/Physics/Ten_Minute_Physics/10-SoftBodies/src/: grabber.cpp  sample.cpp  simulation_utils.cpp  softBody.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/11-SpatialHashing/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp  resource.h
Samples/My_Samples/Physics/Ten_Minute_Physics/11-SpatialHashing/incl/: balls.h  hashing.h  sample.h  simulation_utils.h
Samples/My_Samples/Physics/Ten_Minute_Physics/11-SpatialHashing/src/: balls.cpp  hashing.cpp  sample.cpp  simulation_utils.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodyOBJ/: CMakeLists.txt  ReadMe.md
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodyOBJ/incl/: ModelImporter.h  meshes.h  simulation_utils.h  softBody.h  stdafx.h
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodyOBJ/models/: duck.mtl  duck_tet.txt
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodyOBJ/src/: ModelImporter_OBJ.cpp  hashing.cpp  meshes.cpp  sample.cpp  simulation_utils.cpp  softBody.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodySkinning/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp  resource.rc
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodySkinning/incl/: grabber.h  hashing.h  meshes.h  sample.h  simulation_utils.h  softBody.h
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodySkinning/models/: dragon_tet.txt  dragon_vis.txt
Samples/My_Samples/Physics/Ten_Minute_Physics/12-SoftBodySkinning/src/: grabber.cpp  hashing.cpp  meshes.cpp  sample.cpp  simulation_utils.cpp  softBody.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/14-ClothSimulation/: CMakeLists.txt  ReadMe.md
Samples/My_Samples/Physics/Ten_Minute_Physics/14-ClothSimulation/incl/: cloth.h  grabber.h  meshes.h  simulation_utils.h
Samples/My_Samples/Physics/Ten_Minute_Physics/14-ClothSimulation/models/: cloth.txt
Samples/My_Samples/Physics/Ten_Minute_Physics/14-ClothSimulation/src/: cloth.cpp  grabber.cpp  meshes.cpp  sample.cpp  simulation_utils.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/15-SelfCollision/: CMakeLists.txt  ReadMe.md
Samples/My_Samples/Physics/Ten_Minute_Physics/15-SelfCollision/incl/: cloth.h  grabber.h  hashing.h  simulation_utils.h
Samples/My_Samples/Physics/Ten_Minute_Physics/15-SelfCollision/src/: cloth.cpp  grabber.cpp  hashing.cpp  sample.cpp  simulation_utils.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/16-GPUCloth/: CMakeLists.txt  ReadMe.md
Samples/My_Samples/Physics/Ten_Minute_Physics/16-GPUCloth/incl/: cloth.h  sample.h  simulation_utils.h
Samples/My_Samples/Physics/Ten_Minute_Physics/16-GPUCloth/shaders/: cloth_addCorrectionsCS.hlsl  cloth_addNormalsCS.hlsl  cloth_clearNormalsCS.hlsl  cloth_common.hlsli  cloth_computeRestLengthsCS.hlsl  cloth_integrateCS.hlsl  cloth_normalizeNormalsCS.hlsl  cloth_raycastTriangleCS.hlsl  cloth_simulation.hlsl  cloth_solveConstraintsCS.hlsl  cloth_updateStreamoutCS.hlsl  cloth_updateVelCS.hlsl  shader_interop_cloth.h
Samples/My_Samples/Physics/Ten_Minute_Physics/16-GPUClothReadback/: CMakeLists.txt  main_SDL2.cpp
Samples/My_Samples/Physics/Ten_Minute_Physics/17-FluidSimulation/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp  resource.h  resource.rc
Samples/My_Samples/Rendering/01-HelloTriangle/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp  sample.cpp
Samples/My_Samples/Rendering/02-CustomMaterialShader/: CMakeLists.txt  ReadMe.md  main_SDL2.cpp  main_Windows.cpp  sample.cpp  sample.h  stdafx.h
Samples/My_Samples/Rendering/02-CustomMaterialShader/shaders/: custom_materialPS.hlsl
Samples/Tutorial/01-HelloTriangle/: CMakeLists.txt  main_SDL2.cpp  main_Windows.cpp  resource.h  resource.rc  sample.cpp  sample.h
WickedEngine/: CMakeLists.txt  WickedEngine_SOURCE.vcxitems  WickedEngine_SOURCE.vcxitems.filters  offlineshadercompiler.cpp  wiApplication.cpp  wiBacklog.cpp  wiConfig.cpp  wiConfig.h  wiECS.h  wiEmittedParticle.cpp  wiEnums.h  wiEventHandler.cpp  wiFont.cpp  wiFont.h  wiGUI.cpp  wiGUI.h  wiGraphics.h  wiGraphicsDevice.h  wiGraphicsDevice_DX12.cpp  wiGraphicsDevice_DX12.h  wiGraphicsDevice_Vulkan.cpp  wiGraphicsDevice_Vulkan.h  wiHelper.cpp  wiImage.cpp  wiInitializer.cpp  wiJobSystem.cpp  wiMath.h  wiNoise.h  wiPlatform.h  wiPrimitive.h  wiRenderPath3D.cpp  wiRenderer.cpp  wiRenderer.h  wiScene.cpp  wiScene.h  wiScene_Components.cpp  wiScene_Components.h  wiShaderCompiler.cpp  wiTerrain.cpp  wiVersion.cpp
WickedEngine/Jolt/: Jolt.cmake
WickedEngine/LUA/: CMakeLists.txt
WickedEngine/Utility/: CMakeLists.txt
WickedEngine/Utility/FAudio/: CMakeLists.txt
WickedEngine/WickedEngine.xcodeproj/: project.pbxproj
WickedEngine/offlineshadercompiler.xcodeproj/: project.pbxproj
WickedEngine/shaders/: ShaderInterop_Renderer.h  ShaderInterop_SurfelGI.h  ShaderInterop_VXGI.h  Shaders_SOURCE.vcxitems  Shaders_SOURCE.vcxitems.filters  aerialPerspectiveCS.hlsl  ddgi_debugVS.hlsl  ddgi_raytraceCS.hlsl  ddgi_updateCS.hlsl  emittedparticleHF.hlsli  globals.hlsli  hairparticleHF.hlsli  hairparticle_simulateCS.hlsl  impostorHF.hlsli  lightingHF.hlsli  mesh_blendPS.hlsl  objectHF.hlsli  objectPS_voxelizer.hlsl  objectVS_debug.hlsl  occludeeVS.hlsl  oceanSurfaceHF.hlsli  raytraceCS.hlsl  renderlightmapPS.hlsl  rtdiffuseCS.hlsl  shadingHF.hlsli  shadowPS_transparent.hlsl  skyPS_dynamic.hlsl  skyPS_static.hlsl  skyVS.hlsl  sunPS.hlsl  surfaceHF.hlsli  surfel_binningCS.hlsl  surfel_coverageCS.hlsl  surfel_denoiseCS.hlsl  surfel_indirectprepareCS.hlsl  surfel_integrateCS.hlsl  surfel_raytraceCS.hlsl  surfel_updateCS.hlsl  vPointLightVS.hlsl  vSpotLightVS.hlsl  (+13 more)
(+26 files in other folders)
